--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/contact.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
-    <title>Nossos Produtos</title>
+    <title>Contato</title>
 </head>
 <body>
     <header id="header"></header>
