--- a/pages/index.html
+++ b/pages/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
-    <title>Contato</title>
+    <title>Granja Serra Dourada</title>
 </head>
 <body>
     <header id="header"></header>
 
     <main>
-        
+
     </main>
 
     <footer id="footer"></footer>
