--- a/about.html
+++ b/about.html
@@ -4,14 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/about.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
-    <title>Sobre nós</title>
+    <title>Quem Somos</title>
 </head>
 <body>
     <header id="header"></header>
 
     <main>
-        
+        <h1>Historia</h1>
+        <div class="flex-container">
+           <div>Edisson começou a granja em 2004, com apenas 500 aves. Ele conta que estava concluindo o Ensino Médio em uma escola agrícola de Cacoal, quando teve a sorte de ganhar uma moto em um bingo. Foi então que teve a ideia de vender o veículo e com o dinheiro iniciar o empreendimento.
+            “No início atendia apenas pequenos clientes de Cacoal e utilizava uma moto com carretinha para fazer as entregas”, lembra o empreendedor.  
+            Para melhorar o negócio, Caus se qualificou, estudando sobre as formas de produção de ovos na região. Isso foi necessário para se destacar, já que na época a cidade recebia muitos ovos de baixa qualidade e ele não queria ter o produto comparado, pois defende que ovo não é tudo igual e para garantir um bom produto é preciso conhecer a atividade e saber tomar rumos em toda fase de produção.
+            “A dificuldade era grande, por ser um negócio novo, sem recurso financeiro e tínhamos que conquistar nosso espaço. Sempre trabalhamos com transparência, sem ter a necessidade de forçar nenhum cliente a comprar nossos produtos”, afirmou.  
+            Nos primeiros 10 anos de atividades, a granja Serra Dourada contou apenas com a mão de obra familiar. Eles eram responsáveis por todo o ciclo de produção, vendas e entregas do produto.
+            “Todo o nosso lucro era investido no negócio. Nós ampliamos a produção, estruturamos a granja com a construção de barracões modernos e equipamentos automatizados”, detalhou Edisson.
+            Com a melhoria na estrutura, a granja ganhou capacidade de produção e a família ampliou o leque de abrangência. A granja Serra Dourada foi a primeira no estado a conquistar o selo do Serviço de Inspeção Federal (SIF), emitido pelo Ministério da Agricultura. O SIF garante a qualidade dos produtos nacionais de origem animal e a procedência das produções para todo o mundo. 
+            “Nós temos que agradecer a todos que confiaram e confiam no nosso trabalho. Nosso reconhecimento contou com grandes parceiros que nos deram oportunidades e claro, com o empenho e dedicação da minha família, na conquista de clientes e mercados”, agradeceu Caus.
+            Atualmente a granja Serra Dourada possui um plantel de 170 mil aves em produção, atendendo Rondônia e parte do Amazonas.  A empresa está localizada na linha 10, a 27 km de Cacoal.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="/assets/images/logo.webp" style="width: 251px;" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <img src="/assets/images/logo.webp" style="width: 251px;" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <img src="/assets/images/logo.webp" style="width: 251px;" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <img src="/assets/images/logo.webp" style="width: 251px;" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
     </main>
 
     <footer id="footer"></footer>
