Alteração no código produtos

--- a/products.html
+++ b/products.html
@@ -11,7 +11,15 @@
     <header id="header"></header>
 
     <main>
-        
+        <h1>Granja Serra Dourada</h1>
+        <h3>Nossos Produtos</h3>
+        <div class="flex-container">
+            <h4>Ovos</h4>
+            <img id="Produtos" src="" alt="">
+            
+            <h4>Ovos Paterizados</h4>
+            <img id="Produtos" src="" alt="">
+        </div>
     </main>
 
     <footer id="footer"></footer>
