--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/base.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
-    <title>Sobre nós</title>
+    <title>Quem Somos</title>
 </head>
 <body>
     <header id="header"></header>
