--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="copyright" content="&copy;2024 Granja Serra Dourada">
+    <meta name="description" content="Granja Serra Dourada, Cacoal - RO.">
+    <meta name="keywords" content="cacoal, granja, serra, dourada, contato, facebook, instagram, linkedin, whatsapp, local, localizacao">
+    <meta name="author" content="Granja Serra Dourada">
+    <meta name="robots" content="index, follow">
+
     <link rel="stylesheet" href="/css/contact.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
+
     <title>Contato</title>
 </head>
 <body>
