--- a/products.html
+++ b/products.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="css/components/product.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
     <title>Nossos Produtos</title>
 </head>
+
 <body>
     <header id="header"></header>
 
     <main>
-        
+        <h1 class="titulo">Granja Serra Dourada</h1>
+        <h3 class="titulo">Nossos Produtos</h3>
+        <div class="flex-container">
+            <div class="produtos">
+                <p class="product-name">Produtos 1</p>
+                <img class="image" src="assets/images/logo.webp" alt="Produto 1">
+                <p>Descrição</p>
+            </div>
+
+            <div class="produtos">
+                <p class="product-name">Produtos 2</p>
+                <img class="image" src="assets/images/logo.webp" alt="Produto 2">
+                <p>Descrição</p>
+            </div>
+
+            <div class="produtos">
+                <p class="product-name">Produtos 3</p>
+                <img class="image" src="assets/images/logo.webp" alt="Produto 3">
+                <p>Descrição</p>
+            </div>
+        </div>
+        <br>
     </main>
 
     <footer id="footer"></footer>
 
     <script type="module" src="/js/main.js"></script>
 </body>
+
 </html>
