--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/components/product.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
     <title>Nossos Produtos</title>
@@ -16,8 +17,8 @@
         <h1 class="titulo">Granja Serra Dourada</h1>
         <h3 class="titulo">Nossos Produtos</h3>
         <div class="flex-container">
-            <div class="produtos">
-                <p class="product-name">Produtos 1</p>
+            <!-- <div class="produtos"> -->
+                <!-- <p class="product-name">Produtos 1</p>
                 <img class="image" src="assets/images/logo.webp" alt="Produto 1">
                 <p>Descrição</p>
             </div>
@@ -32,13 +33,37 @@
                 <p class="product-name">Produtos 3</p>
                 <img class="image" src="assets/images/logo.webp" alt="Produto 3">
                 <p>Descrição</p>
-            </div>
-        </div>
-        <br>
+            </div> -->
+
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="assets/images/logo.webp" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/images/logo.webp" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/images/logo.webp" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            <!-- </div> -->
+            <br>
+
     </main>
 
     <footer id="footer"></footer>
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="module" src="/js/main.js"></script>
 </body>
 
