--- a/pages/products.html
+++ b/pages/products.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="copyright" content="&copy;2024 Granja Serra Dourada">
     <meta name="description" content="Granja Serra Dourada, Cacoal - RO.">
-    <meta name="keywords" content="cacoal, granja, serra, dourada, home, ovo, ovos, natureggs, galinha">
+    <meta name="keywords" content="rondonia, cacoal, granja, serra, dourada, home, ovo, ovos, natureggs, galinha">
     <meta name="author" content="Granja Serra Dourada">
     <meta name="robots" content="index, follow">
 
     <link rel="stylesheet" href="/css/products.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
+    <script type="module" src="/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <title>Nossos Produtos</title>
 </head>
@@ -18,11 +22,9 @@
     <header id="header"></header>
 
     <main>
-        
+
     </main>
 
     <footer id="footer"></footer>
-
-    <script type="module" src="/js/main.js"></script>
 </body>
 </html>
