--- a/products.html
+++ b/products.html
@@ -2,69 +2,72 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/components/product.css">
-    <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
-    <title>Nossos Produtos</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/components/product.css">
+  <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
+  <title>Nossos Produtos</title>
 </head>
 
 <body>
-    <header id="header"></header>
+  <header id="header"></header>
 
-    <main>
-        <h1 class="titulo">Granja Serra Dourada</h1>
-        <h3 class="titulo">Nossos Produtos</h3>
-        <div class="flex-container">
-            <!-- <div class="produtos"> -->
-                <!-- <p class="product-name">Produtos 1</p>
-                <img class="image" src="assets/images/logo.webp" alt="Produto 1">
-                <p>Descrição</p>
+  <main>
+    <div class="flex-container">
+
+      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+
+        <div class="carousel-inner">
+
+          <div class="carousel-item active">
+            <img src="Imagens/ovo-granja.webp" class="d-block w-100 " alt="Produto 1">
+            <div class="carousel-caption d-none d-md-block produto">
+              <h5>Produto 1</h5>
+              <p>Descrição produto 1</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="assets/images/logo_rounded.png" class="d-block w-100 " alt="Produto 2">
+            <div class="carousel-caption d-none d-md-block produto">
+              <h5>Produto 2</h5>
+              <p>Descrição produto 2</p>
             </div>
 
-            <div class="produtos">
-                <p class="product-name">Produtos 2</p>
-                <img class="image" src="assets/images/logo.webp" alt="Produto 2">
-                <p>Descrição</p>
+          </div>
+
+          <div class="carousel-item">
+            <img src="assets/images/logo.webp" class="d-block w-100 " alt="Produto 3">
+            <div class="carousel-caption d-none d-md-block produto">
+              <h5>Produto 3</h5>
+              <p>Descrição produto 3</p>
             </div>
 
-            <div class="produtos">
-                <p class="product-name">Produtos 3</p>
-                <img class="image" src="assets/images/logo.webp" alt="Produto 3">
-                <p>Descrição</p>
-            </div> -->
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <br>
+    </div>
+  </main>
 
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="assets/images/logo.webp" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/images/logo.webp" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/images/logo.webp" class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-            <!-- </div> -->
-            <br>
+  <footer id="footer"></footer>
 
-    </main>
-
-    <footer id="footer"></footer>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script type="module" src="/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
