--- a/products.html
+++ b/products.html
@@ -4,61 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="css/components/product.css">
   <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
-  <title>Nossos Produtos</title>
+  <title>Produtos</title>
 </head>
 
 <body>
   <header id="header"></header>
 
   <main>
+    <h1>Conheça Nossos Produtos</h1>
+
     <div class="flex-container">
-
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-
-        <div class="carousel-inner">
-
-          <div class="carousel-item active">
-            <img src="Imagens/ovo-granja.webp" class="d-block w-100 " alt="Produto 1">
-            <div class="carousel-caption d-none d-md-block produto">
-              <h5>Produto 1</h5>
-              <p>Descrição produto 1</p>
-            </div>
-          </div>
-
-          <div class="carousel-item">
-            <img src="assets/images/logo_rounded.png" class="d-block w-100 " alt="Produto 2">
-            <div class="carousel-caption d-none d-md-block produto">
-              <h5>Produto 2</h5>
-              <p>Descrição produto 2</p>
-            </div>
-
-          </div>
-
-          <div class="carousel-item">
-            <img src="assets/images/logo.webp" class="d-block w-100 " alt="Produto 3">
-            <div class="carousel-caption d-none d-md-block produto">
-              <h5>Produto 3</h5>
-              <p>Descrição produto 3</p>
-            </div>
-
-          </div>
+      <div class="d-flex align-items-stretch">
+        <img class="image" src="Imagens/ovo-granja.webp" alt="">
+        <div class="produto">
+          <p>Produto 1</p>
+          <p>Detalhes</p>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-      <br>
+      <div class="d-flex align-items-stretch">
+        <img class="image" src="Imagens/ovo-granja.webp" alt="">
+        <div class="produto">
+          <p>Produto 2</p>
+          <p>Detalhes</p>
+        </div>
+      </div>
+      <div class="d-flex align-items-stretch">
+        <img class="image" src="Imagens/ovo-granja.webp" alt="">
+        <div class="produto">
+          <p>Produto 3</p>
+          <p>Detalhes</p>
+        </div>
+      </div>
+
     </div>
   </main>
 
