Finalizado a primeira versão da página de contato

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,27 +22,32 @@
     <header id="header"></header>
 
     <main>
-        <div>
-            <h1 style="margin-left: 50px;">Fale conosco</h1>
-            <h4 style="margin-left: 80px;">Esperamos o seu contato</h4>
+        <div style="text-align: center; margin-top: 2rem;">
+            <h1>Fale conosco</h1>
+            <h4>Esperamos o seu contato</h4>
         </div>
         <div class="container">
             <div class="content">
                 <h1>Bate-Papo</h1>
                 <p> O bate-papo é a solução ideal para esclarecer dúvidas rápidas e resolver problemas simples de forma ágil e eficiente. Nossos atendentes estão prontos para ajudar você em tempo real. Se você tiver uma pergunta rápida ou precisar de assistência imediata, inicie uma conversa agora mesmo!</p>
-                <div style="display: flex; justify-content: center;"><button class="btn">Falar Agora</button> </div>
+                <div style="display: flex; justify-content: center;"><button class="btn btn-lg">Falar Agora</button> </div>
             </div>    
 
             <div class="content">
                 <h1>Telefone</h1>
                 <p>Para um atendimento mais personalizado ou se você prefere falar diretamente com um de nossos consultores, ligue para nós. Estamos disponíveis para atender suas necessidades e oferecer a melhor solução. Entre em contato: [número de telefone]. Nossa equipe está à disposição de [horário de atendimento] para garantir que você receba todo o suporte necessário.</p>
             </div>
+            
         </div>
-
-        <div class="mapBox">
-            <h1>Localização</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4649.733032407216!2d-61.37799341406212!3d-11.48397670465696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1727116882654!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="container">
+            <div class="content" style="width: 1830px; height: 730px;">
+                <div class="mapBox">
+                    <h1>Localização</h1>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4697.168391354636!2d-61.33146020085629!3d-11.290139837417199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1spt-BR!2sbr!4v1727208805441!5m2!1spt-BR!2sbr" width="1830" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </div>
+        
     </main>
 
     <footer id="footer"></footer>
