--- a/products.html
+++ b/products.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="css/components/product.css">
   <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
   <title>Produtos</title>
@@ -13,31 +15,30 @@
   <header id="header"></header>
 
   <main>
-    <h1>Conheça Nossos Produtos</h1>
+    <h1>Conheça Nossos Produtos!</h1>
 
     <div class="flex-container">
-      <div class="d-flex align-items-stretch">
+      <div class="align-items-stretch">
         <img class="image" src="Imagens/ovo-granja.webp" alt="">
         <div class="produto">
           <p>Produto 1</p>
           <p>Detalhes</p>
         </div>
       </div>
-      <div class="d-flex align-items-stretch">
+      <div class="align-items-stretch">
         <img class="image" src="Imagens/ovo-granja.webp" alt="">
         <div class="produto">
           <p>Produto 2</p>
           <p>Detalhes</p>
         </div>
       </div>
-      <div class="d-flex align-items-stretch">
+      <div class="align-items-stretch">
         <img class="image" src="Imagens/ovo-granja.webp" alt="">
         <div class="produto">
           <p>Produto 3</p>
           <p>Detalhes</p>
         </div>
       </div>
-
     </div>
   </main>
 
