--- a/about.html
+++ b/about.html
@@ -19,29 +19,53 @@
     </div>
 
     <!-- Seção de História -->
-    <div class="container">
+    <div class="header">
+        <h1>Granja Serra Dourada</h1>
+        <p>A nossa história de dedicação e compromisso com a qualidade</p>
+    </div>
+
+    <!-- Seção de História -->
+    <div class="container history-section">
         <h2 class="section-title">Nossa História</h2>
-        <div class="card">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="/assets/images/logo.webp" class="img-fluid rounded-start" alt="Logo Granja Serra Dourada">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Como tudo começou</h5>
-                        <p class="card-text">
-                          Edisson começou a granja em 2004, com apenas 500 aves. Ele conta que estava concluindo o Ensino Médio em uma escola agrícola de Cacoal, quando teve a sorte de ganhar uma moto em um bingo. Foi então que teve a ideia de vender o veículo e com o dinheiro iniciar o empreendimento.
-                          “No início atendia apenas pequenos clientes de Cacoal e utilizava uma moto com carretinha para fazer as entregas”, lembra o empreendedor.  
-                          Para melhorar o negócio, Caus se qualificou, estudando sobre as formas de produção de ovos na região. Isso foi necessário para se destacar, já que na época a cidade recebia muitos ovos de baixa qualidade e ele não queria ter o produto comparado, pois defende que ovo não é tudo igual e para garantir um bom produto é preciso conhecer a atividade e saber tomar rumos em toda fase de produção.
-                          “A dificuldade era grande, por ser um negócio novo, sem recurso financeiro e tínhamos que conquistar nosso espaço. Sempre trabalhamos com transparência, sem ter a necessidade de forçar nenhum cliente a comprar nossos produtos”, afirmou.  
-                          Nos primeiros 10 anos de atividades, a granja Serra Dourada contou apenas com a mão de obra familiar. Eles eram responsáveis por todo o ciclo de produção, vendas e entregas do produto.
-                          “Todo o nosso lucro era investido no negócio. Nós ampliamos a produção, estruturamos a granja com a construção de barracões modernos e equipamentos automatizados”, detalhou Edisson.
-                          Com a melhoria na estrutura, a granja ganhou capacidade de produção e a família ampliou o leque de abrangência. A granja Serra Dourada foi a primeira no estado a conquistar o selo do Serviço de Inspeção Federal (SIF), emitido pelo Ministério da Agricultura. O SIF garante a qualidade dos produtos nacionais de origem animal e a procedência das produções para todo o mundo. 
-                          “Nós temos que agradecer a todos que confiaram e confiam no nosso trabalho. Nosso reconhecimento contou com grandes parceiros que nos deram oportunidades e claro, com o empenho e dedicação da minha família, na conquista de clientes e mercados”, agradeceu Caus.
-                          Atualmente a granja Serra Dourada possui um plantel de 170 mil aves em produção, atendendo Rondônia e parte do Amazonas.  A empresa está localizada na linha 10, a 27 km de Cacoal.<br><br>
-                            Atualmente, a granja Serra Dourada possui um plantel de 170 mil aves em produção, atendendo Rondônia e parte do Amazonas. A empresa está localizada na linha 10, a 27 km de Cacoal.
-                        </p>
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="/imagens/logo.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/imagens/logo.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/imagens/logo.jpg" class="d-block w-100" alt="...">
+                      </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                
+            </div>
+            <div class="col-md-6">
+                <div class="card-body">
+                    <h5 class="card-title">Como tudo começou</h5>
+                    <p class="card-text" style="text-align: justify;">
+                        Edisson começou a granja em 2004, com apenas 500 aves. Ele conta que estava concluindo o Ensino Médio em uma escola agrícola de Cacoal, quando teve a sorte de ganhar uma moto em um bingo. Foi então que teve a ideia de vender o veículo e com o dinheiro iniciar o empreendimento.
+              “No início atendia apenas pequenos clientes de Cacoal e utilizava uma moto com carretinha para fazer as entregas”, lembra o empreendedor.  
+              Para melhorar o negócio, Caus se qualificou, estudando sobre as formas de produção de ovos na região. Isso foi necessário para se destacar, já que na época a cidade recebia muitos ovos de baixa qualidade e ele não queria ter o produto comparado, pois defende que ovo não é tudo igual e para garantir um bom produto é preciso conhecer a atividade e saber tomar rumos em toda fase de produção.
+              “A dificuldade era grande, por ser um negócio novo, sem recurso financeiro e tínhamos que conquistar nosso espaço. Sempre trabalhamos com transparência, sem ter a necessidade de forçar nenhum cliente a comprar nossos produtos”, afirmou.  
+              Nos primeiros 10 anos de atividades, a granja Serra Dourada contou apenas com a mão de obra familiar. Eles eram responsáveis por todo o ciclo de produção, vendas e entregas do produto.
+              “Todo o nosso lucro era investido no negócio. Nós ampliamos a produção, estruturamos a granja com a construção de barracões modernos e equipamentos automatizados”, detalhou Edisson.
+              Com a melhoria na estrutura, a granja ganhou capacidade de produção e a família ampliou o leque de abrangência. A granja Serra Dourada foi a primeira no estado a conquistar o selo do Serviço de Inspeção Federal (SIF), emitido pelo Ministério da Agricultura. O SIF garante a qualidade dos produtos nacionais de origem animal e a procedência das produções para todo o mundo. 
+              “Nós temos que agradecer a todos que confiaram e confiam no nosso trabalho. Nosso reconhecimento contou com grandes parceiros que nos deram oportunidades e claro, com o empenho e dedicação da minha família, na conquista de clientes e mercados”, agradeceu Caus.
+              Atualmente a granja Serra Dourada possui um plantel de 170 mil aves em produção, atendendo Rondônia e parte do Amazonas.  A empresa está localizada na linha 10, a 27 km de Cacoal.
+                    </p>
                 </div>
             </div>
         </div>
@@ -51,34 +75,35 @@
     <div class="mission-section">
         <div class="container">
             <h2 class="text-center">Missão, Visão e Valores</h2>
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-md-4">
-                    <div class="card text-center">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Missão</h5>
-                            <p class="card-text">Garantir a qualidade e frescor dos nossos produtos, atendendo sempre com transparência e compromisso.</p>
+                            <p class="card-text">Produzir ovos com a mais alta qualidade, respeitando nossos clientes e o meio ambiente.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card text-center">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Visão</h5>
-                            <p class="card-text">Ser referência no mercado de ovos, ampliando nossa atuação com inovação e sustentabilidade.</p>
+                            <p class="card-text">Ser líder em sustentabilidade e qualidade no setor avícola em todo o estado de Rondônia.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card text-center">
+                    <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Valores</h5>
-                            <p class="card-text">Compromisso, qualidade, inovação e respeito aos nossos clientes e colaboradores.</p>
+                            <p class="card-text">Transparência, inovação, compromisso com a excelência e sustentabilidade.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
   </main>
     <!-- Footer -->
     <footer id="footer"></footer>
