Feito alguns testes de layouts para a página, após a escolha somente um dos novos arquivos será mantido

--- a/pages/contact layout test.html
+++ b/pages/contact layout test.html
@@ -55,5 +55,6 @@
 
     <footer id="footer"></footer>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <script src="/js/contact.js"></script>
 </body>
 </html>
