--- a/pages/contact layout test2.html
+++ b/pages/contact layout test2.html
@@ -40,17 +40,10 @@
             
         </div>
 
-        <div class="botao" style="display: flex; justify-content: center;"> <button class="btn btn-lg" id="btn-loc">Mostrar Localização</button></div>
-
-        <div class="container" id="mapa" style="display: none;">
-            <div class="content" style="width: 1830px; height: 730px;">
-                <div class="mapBox">
-                    <h1>Localização</h1>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4697.168391354636!2d-61.33146020085629!3d-11.290139837417199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1spt-BR!2sbr!4v1727208805441!5m2!1spt-BR!2sbr" width="1830" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
+        <div class="botao" style="display: flex; justify-content: center;"> 
+        <a href="https://maps.google.com/maps?ll=-11.29014,-61.33146&amp;z=16&amp;t=h&amp;hl=pt-BR&amp;gl=BR&amp;mapclient=embed" target="_blank">
+            <button class="btn btn-lg" id="btn-loc">Abrir Localização</button></a>
         </div>
-        
     </main>
 
     <footer id="footer"></footer>
