--- a/pages/index.html
+++ b/pages/index.html
@@ -18,12 +18,8 @@
 <body>
     <header id="header"></header>
 
-    <main>
-        <div id="presentation-container">            
-            <img src="/assets/images/ovos.jpeg" alt="Aprensentação dos ovos colhidos">
-        </div>
-
-        <img id="banner" src="/assets/images/banner.webp" alt="Banner - Granja Serra Dourada">
+    <main class="main-content">
+        <img id="banner" src="/assets/images/banner.webp" alt="Banner">
     </main>
 
     <footer id="footer"></footer>
