--- a/pages/index.html
+++ b/pages/index.html
@@ -20,6 +20,29 @@
 
     <main class="main-content">
         <img id="banner" src="/assets/images/banner.webp" alt="Banner">
+
+        <section class="solutions-section">
+            <h2 class="solutions-title">Diversas variações e qualidades para você</h2>      
+            
+            <div class="solutions-container">
+                <div class="solution-card">
+                    <h3>Ovos Brancos</h3>
+                    <p>Alta qualidade e frescor direto da nossa granja.</p>
+                </div>
+                <div class="solution-card">
+                    <h3>Ovos Caipiras</h3>
+                    <p>Ovos com sabor autêntico e criação livre.</p>
+                </div>
+                <div class="solution-card">
+                    <h3>Ovos Naturegs</h3>
+                    <p>Produção sustentável, ideal para quem busca qualidade de vida.</p>
+                </div>
+                <div class="solution-card">
+                    <h3>Qualidade de Criação</h3>
+                    <p>Nossas galinhas são criadas com todo o cuidado para garantir os melhores ovos.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer id="footer"></footer>
