Mudanças nas cores das faixas e dos diferenciais

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <section class="highlights-section">
             <div class="highlights-container">
-                <section class="solution-highlight">
+                <section id="solution-in-natura" class="solution-highlight">
                     <div class="solution-text">
                         <h2>Ovos Caipiras</h2>
                         <p>Nossos ovos caipiras são produzidos com o máximo de qualidade, garantindo frescor e um sabor autêntico.</p>
@@ -57,7 +57,7 @@
                     </div>
                 </section>
                 
-                <section class="solution-highlight">
+                <section id="solution-pasteurizados" class="solution-highlight">
                     <div class="solution-image">
                         <img src="/assets/images/ovos.jpeg" alt="Ovos Caipiras">
                     </div>
