Alternância de cores das seções de soluções

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <section class="highlights-section">
             <div class="highlights-container">
-                <section id="solution-in-natura" class="solution-highlight">
+                <section class="solution-highlight">
                     <div class="solution-text">
                         <h2>Ovos Caipiras</h2>
                         <p>Nossos ovos caipiras são produzidos com o máximo de qualidade, garantindo frescor e um sabor autêntico.</p>
@@ -57,7 +57,7 @@
                     </div>
                 </section>
                 
-                <section id="solution-pasteurizados" class="solution-highlight">
+                <section class="solution-highlight">
                     <div class="solution-image">
                         <img src="/assets/images/ovos.jpeg" alt="Ovos Caipiras">
                     </div>
@@ -65,6 +65,20 @@
                         <h2>Ovos Caipiras</h2>
                         <p>Nossos ovos caipiras são produzidos com o máximo de qualidade, garantindo frescor e um sabor autêntico.</p>
                         <a href="#" class="solution-button">Conheça nossos ovos</a>
+                    </div>
+                </section>
+
+                <section class="solution-highlight">
+                    <div class="solution-text">
+                        <h2>Qualidade de criação</h2>
+                        <p>
+                            Na Granja Serra Dourada, a excelência em cada grão: alimentação cuidadosamente selecionada, controle rigoroso e a chave para ovos de qualidade superior. 
+                            Aqui, cada refeição é um passo crucial para garantir ovos saudáveis e nutritivos. Descubra o segredo por trás da nossa produção de ovos de excelência!
+                        </p>
+                        <a href="#" class="solution-button">Conheça nossos ovos</a>
+                    </div>
+                    <div class="solution-image">
+                        <img src="/assets/images/ovos.jpeg" alt="Ovos Caipiras">
                     </div>
                 </section>
             </div>
