Organização dos arquivos nos lugares apropriados

--- a/products.html
+++ b/products.html
@@ -27,14 +27,14 @@
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" style="border-radius: 15px;">
               <div class="carousel-item active">
-                <img src="Imagens/ovo-granja.webp" class="d-block w-100"
+                <img src="/assets/images/ovo-granja.webp" class="d-block w-100"
                   alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+                <img src="/assets/images/ovo-granja.webp" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+                <img src="/assets/images/ovo-granja.webp" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -71,13 +71,13 @@
             <div id="carouselExampleAutoplaying1" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner" style="border-radius: 15px;">
                 <div class="carousel-item active">
-                  <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+                  <img src="/assets/images/ovo-granja.webp" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+                  <img src="/assets/images/ovo-granja.webp" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
+                  <img src="/assets/images/ovo-granja.webp" class="d-block w-100" alt="...">
                 </div>
 
               </div>
