--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/about.css">
     <link rel="shortcut icon" href="/assets/images/logo_rounded.png" type="image/x-icon">
     <title>Quem Somos</title>
 </head>
@@ -29,13 +29,13 @@
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="/imagens/logo.jpg" class="d-block w-100" alt="...">
+                        <img src="/assets/images/logo.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="/imagens/logo.jpg" class="d-block w-100" alt="...">
+                        <img src="/assets/images/logo.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="/imagens/logo.jpg" class="d-block w-100" alt="...">
+                        <img src="/assets/images/logo.jpg" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
