Logo adicionada ao corpo da página de contato

--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,12 @@
     <header id="header"></header>
 
     <main>
-        <div style="text-align: center; margin-top: 2rem;">
+        <div class="top">
+            <img src="/assets/images/logo_rounded.png" alt="">
+            <div class="top_text">
             <h1>Fale conosco</h1>
             <h4>Esperamos o seu contato</h4>
+            </div>
         </div>
         <div class="container">
             <div class="content">
