Base para email de contato

--- a/contact.html
+++ b/contact.html
@@ -26,17 +26,22 @@
 
     <main>
         <div class="top">
-            <img src="/assets/images/logo_rounded.png" alt="">
             <div class="top_text">
             <h1>Fale conosco</h1>
             <h4>Esperamos o seu contato</h4>
             </div>
+            
         </div>
-        <div class="container">
+        <div class="container" id="blocks">
+            <div class = ""id="email-box" style="display: none;">
+                <h1>dnfdnfgndfgmngfm</h1>
+            </div>
             <div class="content">
                 <h1>Bate-Papo</h1>
                 <p> O bate-papo é a solução ideal para esclarecer dúvidas rápidas e resolver problemas simples de forma ágil e eficiente. Nossos atendentes estão prontos para ajudar você em tempo real. Se você tiver uma pergunta rápida ou precisar de assistência imediata, inicie uma conversa agora mesmo!</p>
-                <div class="botao" style="display: flex; justify-content: center;"><button class="btn btn-lg">Falar Agora</button> </div>
+                <div class="botao" style="display: flex; justify-content: center;">
+                    <button class="btn btn-lg" id="btn-talk">Falar Agora</button> 
+                </div>
             </div>    
 
             <div class="content">
@@ -67,5 +72,7 @@
 
     <script type="module" src="/js/main.js"></script>
     <script src="js/contact.js"></script>
+
+
 </body>
 </html>
