novo produtos (teste)

--- a/products.html
+++ b/products.html
@@ -20,93 +20,31 @@
       <p>Conheça Nossos Produtos!</p>
     </div>
 
-    <div class="container history-section">
+    <div class="history-section">
       <h2 class="section-title">Nossos Produtos</h2>
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner" style="border-radius: 15px;">
-              <div class="carousel-item active">
-                <img src="Imagens/ovo-granja.webp" class="d-block w-100"
-                  alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-
-        </div>
-        <div class="col-md-6">
-          <div class="card-body">
-            <h5 class="card-title">OVO IN NATURA</h5>
-            <p class="card-text" style="text-align: justify;">
-              Descubra o frescor do nosso Ovo In Natura! Selecionados diretamente da granja, garantindo um sabor intenso
-              e gemas vibrantes. Versáteis, são ideais para omeletes, bolos e muito mais, além de serem uma rica fonte
-              de proteínas e nutrientes. Ao escolher nosso Ovo In Natura, você apoia práticas sustentáveis e traz a
-              pureza do campo para a sua mesa. Experimente e sinta a diferença em suas receitas!
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
 
-    <div class="mission-section">
-      <div class="container history-section">
-        <div class="row align-items-center ">
-          <div class="col-md-6">
-            <div id="carouselExampleAutoplaying1" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner" style="border-radius: 15px;">
-                <div class="carousel-item active">
-                  <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="Imagens/ovo-granja.webp" class="d-block w-100" alt="...">
-                </div>
-
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying1"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying1"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-
-          </div>
-          <div class="col-md-6">
-            <div class="card-body">
-              <h5 class="card-tit0le">OVO LÍQUIDO PASTEURIZADO</h5>
-              <p class="card-text" style="text-align: justify;">
-                Os Ovos Líquidos Pasteurizados oferecem frescor, qualidade e praticidade para suas receitas. Produzidos
-                a partir de ovos selecionados e submetidos a um rigoroso processo de pasteurização, garantem segurança e
-                preservação de nutrientes. Com uma embalagem fácil de usar, permitem medir a quantidade exata, evitando
-                desperdícios. Perfeitos para omeletes, bolos e molhos, trazem um sabor autêntico que enriquece suas
-                criações culinárias, tudo isso com um compromisso com práticas sustentáveis. Experimente a versatilidade
-                e o sabor dos nossos Ovos Líquidos Pasteurizados e transforme sua cozinha!
-              </p>
-            </div>
-          </div>
+    
+    <div class="flex-container">
+      <div class="align-items-stretch">
+        <img class="image" src="Imagens/ovo-granja.webp" alt="">
+        <div class="produto">
+          <p>Produto 1</p>
+          <p>Detalhes</p>
+        </div>
+      </div>
+      <div class="align-items-stretch">
+        <img class="image" src="Imagens/ovo-granja.webp" alt="">
+        <div class="produto">
+          <p>Produto 2</p>
+          <p>Detalhes</p>
+        </div>
+      </div>
+      <div class="align-items-stretch">
+        <img class="image" src="Imagens/ovo-granja.webp" alt="">
+        <div class="produto">
+          <p>Produto 3</p>
+          <p>Detalhes</p>
         </div>
       </div>
     </div>
