Configuradas URLs e nomes das páginas para melhor leitura do usuário

--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Granja Serra Dourada">
   <meta property="og:description" content="Granja Serra Dourada, produtora de ovos de alta qualidade em Cacoal - RO.">
   <meta property="og:image" content="/assets/images/banner.webp">
-  <meta property="og:url" content="https://www.granjaserradourada.com.br">
+  <meta property="og:url" content="https://www.granjaserradourada.com.br/produtos">
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="/css/products.css">
