Alteração na meta tag para a pesquisa de granja serra dourada login levr à esta página

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="copyright" content="&copy;2024 Granja Serra Dourada">
     <meta name="description" content="Granja Serra Dourada, Cacoal - RO.">
-    <meta name="keywords" content="rondonia, cacoal, granja, serra, dourada, sobre, historia, missao, valores">
+    <meta name="keywords" content="rondonia, cacoal, granja, serra, dourada, login, usuário">
     <meta name="author" content="Granja Serra Dourada">
     <meta name="robots" content="index, follow">
 
